# Kaleidoscope

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  KaleidoscopeJIT_8h_source.html  README.md  annotated.html  annotated_dup.js  api_8h_source.html  ast_8h_source.html  build.sh  classes.html  classkaleidoscope_1_1BinaryExprAST-members.html  classkaleidoscope_1_1BinaryExprAST.html  classkaleidoscope_1_1BinaryExprAST.js  classkaleidoscope_1_1BinaryExprAST__coll__graph.map  classkaleidoscope_1_1BinaryExprAST__coll__graph.md5  classkaleidoscope_1_1BinaryExprAST__inherit__graph.md5  classkaleidoscope_1_1CallExprAST-members.html  classkaleidoscope_1_1CallExprAST.html  classkaleidoscope_1_1CallExprAST.js  classkaleidoscope_1_1CallExprAST__coll__graph.map  classkaleidoscope_1_1CallExprAST__coll__graph.md5  classkaleidoscope_1_1CallExprAST__inherit__graph.md5  classkaleidoscope_1_1CodeGenContext-members.html  classkaleidoscope_1_1CodeGenContext.html  classkaleidoscope_1_1CodeGenContext.js  classkaleidoscope_1_1ExprAST-members.html  classkaleidoscope_1_1ExprAST.html  classkaleidoscope_1_1ExprAST.js  classkaleidoscope_1_1ExprAST__inherit__graph.map  classkaleidoscope_1_1ExprAST__inherit__graph.md5  classkaleidoscope_1_1ForExprAST-members.html  classkaleidoscope_1_1ForExprAST.html  classkaleidoscope_1_1ForExprAST.js  classkaleidoscope_1_1ForExprAST__coll__graph.map  classkaleidoscope_1_1ForExprAST__coll__graph.md5  classkaleidoscope_1_1ForExprAST__inherit__graph.md5  classkaleidoscope_1_1FunctionAST-members.html  classkaleidoscope_1_1FunctionAST.html  (+65 more)
examples/: testLoop.kds
kaleidoscope/: AST.h  CMakeLists.txt  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  api.h  ast.cpp  ast.h  codeGenContext.cpp  codeGenContext.h  lexer.cpp  lexer.h  logger.cpp  logger.h  parser.cpp  parser.h
kaleidoscopeCompiler/: CMakeLists.txt  main.cpp
kaleidoscopeDriver/: CMakeLists.txt  Driver.cpp
kaleidoscopeInterpreter/: CMakeLists.txt  main.cpp
kaleidoscopeParser/: CMakeLists.txt  main.cpp
search/: all_0.js  all_1.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_8.js  classes_9.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js
src/: Kaleidoscope.md
src/kaleidoscope/: CMakeLists.txt  ast.h  codeGenContext.cpp  lexer.h  logger.cpp  parser.cpp  parser.h
src/kaleidoscopeCompiler/: CMakeLists.txt  main.cpp
src/kaleidoscopeInterpreter/: CMakeLists.txt  main.cpp
